# shapes

./: .gitignore  ANDROID.txt  BUILD.txt  CMakeLists.txt  LAYOUT.txt  LICENSE.txt  README.txt  TODO.txt  premake5.lua  resource.rc
android-project/: AndroidManifest.xml  build.xml
android-project/jni/: Application.mk
android-project/jni/src/: Android.mk
android-project/res/layout/: main.xml
android-project/src/com/neoaggelos/shapes/: Shapes.java
android-project/src/org/libsdl/app/: SDLActivity.java
assets/: icon.icns  icon.xcf
assets/themes/: themes.ini
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  FindSDLU.cmake
src/: audiodata.cpp  audiodata.h  difficulty.cpp  difficulty.h  entername.cpp  entername.h  game.cpp  game.h  highscores.cpp  highscores.h  main.cpp  main.h  random.cpp  random.h  render.cpp  render.h  settings.cpp  settings.h  settingsmenu.cpp  settingsmenu.h  shape.cpp  shape.h  super.cpp  super.h  textrenderer.cpp  textrenderer.h  tutorial.cpp  tutorial.h  util.cpp  util.h
