cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project(Shapes)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include("${CMAKE_SOURCE_DIR}/cmake/FindSDLU.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/FindSDL2.cmake")

option(PORTABLE "TODO Save scores and settings in the same folder as the executable" OFF)
option(MACOSX_BUNDLE "Build Shapes.app under Mac OS X" ON)

find_package(SDL2 REQUIRED)
find_package(SDLU REQUIRED)
include_directories(${SDL2_INCLUDE_DIR} ${SDLU_INCLUDE_DIR})
link_libraries(${SDL2MAIN_LIBRARY} ${SDL2_LIBRARY} ${SDLU_LIBRARY})

file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*)
file(GLOB TXT_FILES ${CMAKE_SOURCE_DIR}/*.txt)
file(GLOB ASSETS ${CMAKE_SOURCE_DIR}/assets/*.bmp)

if (WIN32)
  add_executable(Shapes WIN32 ${SOURCES} ${TXT_FILES} ${ASSETS})
  add_definitions("-DASSETSDIR=\"${CMAKE_SOURCE_DIR}/assets/\"")
  install(TARGETS Shapes DESTINATION ${CMAKE_INSTALL_PREFIX})
  install(FILES ${ASSETS} DESTINATION ${CMAKE_INSTALL_PREFIX})
elseif (APPLE AND MACOSX_BUNDLE)
  add_executable(Shapes MACOSX_BUNDLE ${SOURCES} ${TXT_FILES} ${ASSETS})
  set_source_files_properties(${ASSETS} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  install(TARGETS Shapes DESTINATION /Applications)
else()
  add_executable(Shapes ${SOURCES} ${TXT_FILES} ${ASSETS})
  add_definitions("-DASSETSDIR=\"${CMAKE_INSTALL_PREFIX}/share/shapes/\"")
  install(TARGETS Shapes DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
  install(FILES ${ASSETS} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/shapes)
endif()
